--- a/NarcissisticNumber/NarcissisticNumber.csproj
+++ b/NarcissisticNumber/NarcissisticNumber.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>NarcissisticNumberDojo</RootNamespace>
+    <AssemblyName>NarcissisticNumberDojo</AssemblyName>
   </PropertyGroup>
 
 </Project>
