--- a/NarcissisticNumberTest/NarcissisticNumberTest.csproj
+++ b/NarcissisticNumberTest/NarcissisticNumberTest.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>NarcissisticNumberDojoTest</AssemblyName>
+
+    <RootNamespace>NarcissisticNumberDojoTest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
